--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   policy-api:
-    image: orchestracities/anubis-management-api:master
+    image: anubis:v1 # orchestracities/anubis-management-api:master
     networks:
       - envoymesh
     environment:
