--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.11.0",
     "@mui/system": "^5.10.15",
     "@mui/utils": "^5.10.15",
+    "@mui/x-data-grid": "^6.18.1",
     "@mui/x-date-pickers": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^1.3.4",
@@ -50,9 +51,6 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx .",
-    "prestart": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
-    "pretest": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
-    "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
     "cypress:open": "cypress open",
     "cypress:test": "cypress run"
   },
